--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
     <header>
-        <ui class="header-menu">
+        <ul class="header-menu">
             <li><a href="#link">all</a></li>
             <li><a href="#link">web design</a></li>
             <li><a href="#link">logo design</a></li>
             <li><a href="#link">photography</a></li>
             <li class="active"><a href="#link">wordpress</a></li>
-        </ui>
+        </ul>
     </header>
     <div class="main">
         <div class="content clearfix">
@@ -84,7 +84,7 @@
                 <li><a class="paginator-btn" href="">4</a></li>
                 <li><a class="paginator-btn" href="">5</a></li>
                 <li><a class="paginator-btn" href="">...</a></li>
-                <li><a class="paginator-btn" href="">10</a></a></li>
+                <li><a class="paginator-btn" href="">10</a></li>
                 <li><a class="paginator-btn" href="">11</a></li>
                 <li><a class="paginator-btn" href="">12</a></li>
                 <li><a class="paginator-btn next" href="#link"></a></li>
